Fix benchmark chart overlap

--- a/website/src/routes/layout.css
+++ b/website/src/routes/layout.css
@@ -941,6 +941,19 @@
     padding-left: 82px;
 }
 
+.benchmark-data-table {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
+    border: 0;
+}
+
 .benchmark-data-link {
     display: flex;
     width: fit-content;
